# FtpSiteSynchronizer

./: .replit  DEPLOYMENT_ENVIRONMENTS.md  README_DEPLOYMENT.md  app.py  complete_fix.sh  create_cdrs_network_drive.py  crypto_utils.py  deploy.sh  deploy_check.sh  deploy_fixed.sh  email_service.py  fix_current_server.sh  fix_network_drive_permissions.py  ftp_browser.py  ftp_client.py  job_group_manager.py  models.py  network_drive_manager.py  network_drive_troubleshooting.md  nfs_client.py  pyproject.toml  quick_fix.sh  quick_ftp_test.py  recovery.sh  replit.md  routes.py  scheduler.py  test_complete_download.py  test_download.py  test_ftp_connection.py  test_job_debug.py  test_simple_ftp.py  utils.py
attached_assets/: Pasted--Date-Time-Type-Status-Level-Details-Duration-Actions-2025-07-14-17-32-37-System-network-drives--1752528905211_1752528905211.txt  Pasted--INFO-Initializing-database-tables-File-string-line-23-cursor-execute--1752181695857_1752181695857.txt  Pasted--SUCCESS-Self-signed-SSL-certificate-created-INFO-Configuring-Supervisor-Synchronizing-state-1752090096656_1752090096656.txt  Pasted-2025-07-15-10-17-27-System-scheduler-Error-Job-Upload-to-MANAGEMENT-failed-Local-folder-not--1752589102427_1752589102428.txt  Pasted-DEBUG-tzlocal-etc-localtime-found-DEBUG-tzlocal-2-found-etc-timezone-Etc-UTC-etc-loca-1752083037414_1752083037415.txt  Pasted-root-ftpmanager-Install-cryptography-to-generate-a-proper-Fernet-key-sudo-pip3-install-cryptog-1752083297977_1752083297977.txt  (+2 more)
templates/: base.html  browser.html  browser_network_drive.html  browser_site.html  jobs.html  (+12 more)
(+73 files in other folders)
