[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "paramiko>=3.5.1",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
